--- a/openapi/components/schemas/UserMigratedData.yml
+++ b/openapi/components/schemas/UserMigratedData.yml
@@ -18,6 +18,8 @@ properties:
         type: number
       paid:
         type: number
+      translator:
+        type: number
       mmc21_honorary:
         type: number
   registrationDate:
