--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
         "format": "prettier --write .",
         "format:check": "prettier --check .",
         "lint": "spectral lint ./openapi/openapi.yml",
-        "preview": "browser-sync start --server --index preview.html --no-ui --listen localhost --files \"**/*yml\""
+        "start": "npm-run-all --parallel start:*",
+        "start:preview": "browser-sync start --server --index preview.html --no-ui --port 8011 --listen localhost --files \"**/*yml\"",
+        "start:proxy": "lcp --proxyUrl https://api.resonite.com --origin http://localhost:8011 --port 8010"
     },
     "license": "MIT",
     "devDependencies": {
         "@stoplight/spectral-cli": "^6.11.0",
         "browser-sync": "^3.0.2",
+        "local-cors-proxy": "^1.1.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "^3.2.4"
     }
 }
