Disable oas3-operation-security-defined rule in .spectral.yml

--- a/.spectral.yml
+++ b/.spectral.yml
@@ -17,6 +17,7 @@ rules:
   info-license: off
   license-url: off
   oas3-api-servers: off
+  oas3-operation-security-defined: off
 
   schema-title:
     given: '$.components.schemas[*]'
